# SKT_2sem

./: README.md
.github/workflows/: blank.yml
skt_lab02/: .gitignore  CMakeLists.txt  README.md  area.txt  config.txt  generate_receivers.txt  receivers.txt
skt_lab02/src/: direct.cpp  direct.h  inverse.cpp  inverse.h  main.cpp
